SERVER-19298: always use collection options when creating collections